--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <title>Robiullah Prince</title>
 </head>
@@ -14,5 +13,4 @@
 
     <p>A student of DIU</p>
 </body>
-
-<\html>
+</html>
